--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jade": "*",
     "mongodb": "1.3.19",
     "monk": "0.7.1",
-    "mongoose": "~3.6.19"
+    "mongoose": "~3.6.19",
+    "jquery": "~1.8.3"
   },
   "devDependencies": {
     "express-debug": "~1.0.3"
