--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "mongodb": "1.3.19",
     "monk": "0.7.1",
     "mongoose": "~3.6.19",
-    "jquery": "~1.8.3"
+    "jquery": "~1.8.3",
+    "orm": "~2.1.2",
+    "mysql": "~2.0.0-alpha9",
+    "migrate": "~0.1.3"
   },
   "devDependencies": {
     "express-debug": "~1.0.3"
